syntax = "proto3";

package usermanagement;

option go_package = "github.com/Parthiba-Hazra/user-management-microservice/api";

message User {
  string user_id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
}

message UserProfile {
  string user_id = 1;
  string full_name = 2;
  string bio = 3;
}

message RegisterUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterUserResponse {
  string user_id = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string user_id = 1;
  string token = 2;
}

service UserManagementService {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}
